kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: igraj-4xproti
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: |
      traefik-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - 4x.lb2.djnd.si
        - igraj.4xproti.si
      secretName: igraj-4xproti-tls
  rules:
    - host: 4x.lb2.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: igraj-4xproti
                port:
                  number: 80
    - host: igraj.4xproti.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: igraj-4xproti
                port:
                  number: 80
